[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_ICT_shashikumargoud_92400133069"
version = "0.1.0"
authors = [
    { name = "shashi", email = "shashikumargoud.gundrathi127796@marwadiuniversity.ac.in" }
]
dependencies = ["numpy", "matplotlib"]
requires-python = ">=3.7"
description = "Signal generation and operations package for ICT assignment"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Shashi-kumar-g/long-hour-coding.git"
Issues = "https://github.com/Shashi-kumar-g/long-hour-coding.git"